examples/invalid/abstract_not_overridden.jd
template t {
    conclusion c is "The system is correct"
    strategy s is "Testing"
    s supports c
    @support abs is "Abstract support"
    abs supports s
}

justification j implements t {
    conclusion top is "The system is correct"
    strategy js is "Via template"
    js supports top
    t:c supports js
}
